// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        type="submit"
      >
        搜索
      </button>
    </form>
  </div>
  <div
    className="table"
  >
    <div
      className="table-header"
    >
      <span
        style={
          Object {
            "width": "40%",
          }
        }
      >
        <button
          className="button-inline "
          onClick={[Function]}
          type="button"
        >
          Title
        </button>
      </span>
      <span
        style={
          Object {
            "width": "30%",
          }
        }
      >
        <button
          className="button-inline "
          onClick={[Function]}
          type="button"
        >
          Author
        </button>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <button
          className="button-inline "
          onClick={[Function]}
          type="button"
        >
          Comments
        </button>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <button
          className="button-inline "
          onClick={[Function]}
          type="button"
        >
          Points
        </button>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <button
          className="button-inline button-active"
          onClick={[Function]}
          type="button"
        >
          Archive
        </button>
      </span>
    </div>
    <div
      className="table-row"
    >
      <span
        style={
          Object {
            "width": "40%",
          }
        }
      >
        title
      </span>
      <span
        style={
          Object {
            "width": "30%",
          }
        }
      >
        author
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        num_comments
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        points
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        operation
      </span>
    </div>
  </div>
  <div
    className="interactions"
  >
    <div>
      Loading...
    </div>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className="button-inline"
  onClick={[Function]}
  type="button"
>
  more
</button>
`;

exports[`Search has a valid snapshot 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    type="text"
    value=""
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <button
        className="button-inline button-active"
        onClick={[Function]}
        type="button"
      >
        Title
      </button>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <button
        className="button-inline "
        onClick={[Function]}
        type="button"
      >
        Author
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline "
        onClick={[Function]}
        type="button"
      >
        Comments
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline "
        onClick={[Function]}
        type="button"
      >
        Points
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline "
        onClick={[Function]}
        type="button"
      >
        Archive
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      title
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      author
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      num_comments
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      points
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      operation
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href="www.baidu.com"
      >
        React
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      Azhilingege
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      3
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      4
    </span>
    <button
      className="button-inline"
      onClick={[Function]}
      style={
        Object {
          "color": "blue",
          "width": "10%",
        }
      }
      type="button"
    >
      Dismiss
    </button>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href="www.hao123.com"
      >
        Redux
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      Bzhilingege
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      5
    </span>
    <button
      className="button-inline"
      onClick={[Function]}
      style={
        Object {
          "color": "blue",
          "width": "10%",
        }
      }
      type="button"
    >
      Dismiss
    </button>
  </div>
</div>
`;
